@@ -29,6 +29,9 @@
    - dtucker@cvs.openbsd.org 2008/06/09 18:06:32
      [regress/test-exec.sh]
      Don't generate putty keys if we're not going to use them.  ok djm
+   - dtucker@cvs.openbsd.org 2008/06/10 05:23:32
+     [regress/addrmatch.sh regress/Makefile]
+     Regress test for Match CIDR rules.  ok djm@
 
 20080609
  - (dtucker) OpenBSD CVS Sync
@@ -4115,4 +4118,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4954 2008/06/10 13:15:54 dtucker Exp $
+$Id: ChangeLog,v 1.4955 2008/06/10 13:16:46 dtucker Exp $
